<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lipsensor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <!-- Define the action to navigate to CameraActivity -->
        <action
            android:id="@+id/action_to_camera"
            app:destination="@id/nav_camera" />

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lipsensor.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lipsensor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.lipsensor.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />



    <activity
        android:id="@+id/nav_camera"
        android:name="com.example.lipsensor.ui.camera.CameraActivity"
        android:label="@string/menu_camera"
        tools:layout="@layout/activity_camera" />
</navigation>